Update node web-server Adding feature to display forecast json data in the browser from user inputed address.

--- a/node/web-server/templates/views/about.hbs
+++ b/node/web-server/templates/views/about.hbs
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="img/weather.png">
     <link rel="stylesheet" href="css/style.css" />
     <title>About</title>
 </head>
 
 <body>
-    {{>header}}
-    <img src="img/robot.png" alt="robot image" />
+    <div class="main-content">
+        {{>header}}
+        <img class="portrait" src="img/robot.png" alt="robot image" />
+    </div>
     {{>footer}}
 </body>
 
