--- a/node/web-server/templates/views/404.hbs
+++ b/node/web-server/templates/views/404.hbs
@@ -3,14 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/weather.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>404</title>
 </head>
 
 <body>
-    {{>header}}
-    {{ errorMessage }}
+    <div class="main-content">
+        {{>header}}
+        {{ errorMessage }}
+    </div>
     {{>footer}}
 </body>
 
