--- a/node/web-server/templates/views/help.hbs
+++ b/node/web-server/templates/views/help.hbs
@@ -3,13 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="img/weather.png">
   <link rel="stylesheet" href="css/style.css">
   <title>Help</title>
 </head>
 
 <body>
-  {{>header}}
-  <p>{{ helpText }}</p>
+  <div class="main-content">
+    {{>header}}
+    <p>{{ helpText }}</p>
+  </div>
   {{>footer}}
 </body>
 
